fixed a layout bug that caused footer to overflow on to the main content due to margin bottom

--- a/client/src/layouts/Layoutstyles.css
+++ b/client/src/layouts/Layoutstyles.css
@@ -1,4 +1,4 @@
 .content-wrapper {
-  margin-bottom: 50px;
+  /* margin-bottom: 50px; */
   overflow: auto;
 }
